--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -140,6 +140,18 @@ XINTEXT (0->0.7mld),
                     ;
             viewCache = "0H";
             break;
+        case 28:
+            ViewBag.Title = "Nákup roušek od českých výrobců? Stát obchoduje jen se zlomkem z nich";
+            ViewBag.SocialShareText = "Jaká je slibovaná a jaká je skutečná pomoc státu v dobách koronavirové epidemie? Ve spolupráci s Rekonstrukcí státu hlídáme, kolik stát skutečně vyplatil na podpoře podnikatelům a občanům.";
+            ViewBag.SubTitle = "";
+            ViewBag.SocialShareTitle = "Jaká je skutečná pomoc státu v dobách koronavirové epidemie?";
+            ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
+            ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
+                    + "<meta property=\"og:image:height\" content=\"1080\" />"
+                    + "<meta property=\"og:image:type\" content=\"image/png\" />"
+                    ;
+            viewCache = "0H";
+            break;
         default:
             break;
     }
