--- a/Web.Statu/Views/Osoby/hledat.cshtml
+++ b/Web.Statu/Views/Osoby/hledat.cshtml
@@ -8,7 +8,7 @@
 @using HlidacStatu.Web.Models;
 
 @{
-    ViewBag.Title = "Politici a osoby s vazbou na politiku";
+    ViewBag.Title = "Politici, osoby s vazbou na politiku, nebo sponzoři";
     ViewBag.MoreHtml = "<p><b>Tady najdete <a href='/Report/5'>smlouvy soukromých firem s vazbou na politiky</a></b></p>";
 
 
