--- a/Web.Statu/Views/Home/OsobaVazby.cshtml
+++ b/Web.Statu/Views/Home/OsobaVazby.cshtml
@@ -12,8 +12,7 @@
 {
 
     @if (HlidacStatu.Web.Controllers.HomeController.DontIndexOsoby.Contains(Model.NameId.ToLower())
-                || Model.NotInterestingToShow()
-)
+                || Model.NotInterestingToShow())
     {
         <meta name="robots" content="noindex, noarchive">
     }
@@ -107,16 +106,6 @@
 
 }
 
-@section title {
-    <div class="container">
-        <div class="col-md-10 col-md-offset-1">
-            <h2>@Model.FullName()</h2>
-            <p>@Model.StatusOsoby().ToNiceDisplayName()</p>
-            <p>Přehled vazeb osoby na firmy</p>
-        </div>
-    </div>
-}
-
 
 @section breadcrumb
 {
@@ -127,6 +116,13 @@
         <li class="active">@ViewBag.Title</li>
     </ol>
 }
+<div class="container">
+    <div class="col-md-10 col-md-offset-1">
+        <h2>@Model.FullName()</h2>
+        <p>@Model.StatusOsoby().ToNiceDisplayName()</p>
+        <p>Přehled vazeb osoby na firmy</p>
+    </div>
+</div>
 
 
 
